--- a/index.html
+++ b/index.html
@@ -20,6 +20,89 @@
 	</head>
 	<body id="page-top">
 
+<!-- Navigation -->
+<nav class="navbar navbar-default navbar-fixed-top">
+	<div class="container">
+		<!-- Brand and toggle get grouped for better mobile display -->
+		<div class="navbar-header page-scroll">
+			<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+			<span class="sr-only">Toggle navigation</span>
+			<span class="icon-bar"></span>
+			<span class="icon-bar"></span>
+			<span class="icon-bar"></span>
+			</button>
+			<a class="navbar-brand page-scroll" href="#page-top"><img src="images/logo.png" alt="Sanza theme logo"></a>
+		</div>
+		<!-- Collect the nav links, forms, and other content for toggling -->
+		<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+			<ul class="nav navbar-nav navbar-right">
+				<li class="hidden">
+					<a href="#page-top"></a>
+				</li>
+				<li>
+					<a class="page-scroll" href="#page-top">Home</a>
+				</li>
+				<li>
+					<a class="page-scroll" href="#about">About</a>
+				</li>
+				<li>
+					<a class="page-scroll" href="#features">Features</a>
+				</li>
+				<li>
+					<a class="page-scroll" href="#portfolio">Portfolio</a>
+				</li>
+				<li>
+					<a class="page-scroll" href="#partners">Partners</a>
+				</li>
+				<li>
+					<a class="page-scroll" href="#team">Team</a>
+				</li>
+				<li>
+					<a class="page-scroll" href="#contact">Contact</a>
+				</li>
+			</ul>
+		</div>
+		<!-- /.navbar-collapse -->
+	</div>
+	<!-- /.container-fluid -->
+</nav>
+<!-- Header -->
+<header>
+	<div class="container-fluid">
+		<div class="slider-container">
 
+				<div class="owl-slider owl-carousel">
+					<div class="item">
+						<div class="owl-slider-item">
+							<img src="images/demo/slider-1.jpg" class="img-responsive" alt="portfolio">
+							<div class="intro-text">
+								<div class="intro-lead-in">We are the number one</div>
+								<div class="intro-heading">Design & Development Agency</div>
+							</div>
+						</div>
+					</div>
+					<div class="item">
+						<div class="owl-slider-item">
+							<img src="images/demo/slider-1.jpg" class="img-responsive" alt="portfolio">
+							<div class="intro-text">
+								<div class="intro-lead-in">We are the number one</div>
+								<div class="intro-heading">Design & Development Agency</div>
+							</div>
+						</div>
+					</div>
+					<div class="item">
+						<div class="owl-slider-item">
+							<img src="images/demo/slider-1.jpg" class="img-responsive" alt="portfolio">
+							<div class="intro-text">
+								<div class="intro-lead-in">We are the number one</div>
+								<div class="intro-heading">Design & Development Agency</div>
+							</div>
+						</div>
+					</div>
+				</div>
+
+		</div>
+	</div>
+</header>
 	</body>
 </html>
