--- a/index.html
+++ b/index.html
@@ -104,5 +104,19 @@
 		</div>
 	</div>
 </header>
+
+<section class="section-cta">
+	<div class="container">
+		<div class="row">
+			<div class="col-md-8">
+				<h2>This is Call To Action module. One click and template is yours.</h2>
+			</div>
+			<div class="col-md-4">
+				<a href="#" class="button-cta">DOWNLOAD</a>
+			</div>
+		</div>
+	</div>
+</section>
+
 	</body>
 </html>
